Added logic for all the CURDs and tamplets

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -12,4 +12,5 @@
   <a class="nav-link" href="/items">Get all</a>
   <a class="nav-link" href="/insert">Insert</a>
   <a class="nav-link" href="/delete">Delete</a>
+  <a class="nav-link" href="/update">Update</a>
 </html>
