--- a/views/Done.ejs
+++ b/views/Done.ejs
@@ -7,9 +7,10 @@
     <title>Done</title>
   </head>
   <body>
-    <p>Added <%= name %> sucessfully!</p>
+    <p><%= msg %></p>
   </body>
   <a class="nav-link" href="/items">Get all</a>
   <a class="nav-link" href="/insert">Insert</a>
   <a class="nav-link" href="/delete">Delete</a>
+  <a class="nav-link" href="/update">Update</a>
 </html>
