--- a/views/Delete.ejs
+++ b/views/Delete.ejs
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Insert</title>
+    <title>Delete</title>
   </head>
   <body>
-    <form action="/items" method="POST">
-      <input type="text" placeholder="name" name="name" />
-      <input type="text" placeholder="price" name="price" />
+    <form action="/itemDelete" method="POST">
+      <input type="text" placeholder="id" name="_id" />
       <button type="submit">Submit</button>
     </form>
   </body>
