--- a/views/Update.ejs
+++ b/views/Update.ejs
@@ -7,7 +7,8 @@
     <title>Insert</title>
   </head>
   <body>
-    <form action="/items" method="POST">
+    <form action="/item" method="post">
+      <input type="text" placeholder="_id" name="_id" />
       <input type="text" placeholder="name" name="name" />
       <input type="text" placeholder="price" name="price" />
       <button type="submit">Submit</button>
