Added csv export feature button

--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -26,4 +26,5 @@
   <a class="nav-link" href="/insert">Insert</a>
   <a class="nav-link" href="/delete">Delete</a>
   <a class="nav-link" href="/update">Update</a>
+  <a class="nav-link" href="/csvExport">Export to CSV!</a>
 </html>
